Fix Messenger’s squished typing indicator bug

--- a/css/browser.css
+++ b/css/browser.css
@@ -299,3 +299,9 @@ body.show-message-buttons ._4_j4 ._39bj {
 ._4gd0 {
 	background-color: transparent !important;
 }
+
+/* Typing indicator */
+._4a0v._1x3z {
+	display: flex;
+	justify-content: center;
+}
